assets/css/style.css
body {
  padding-top: 54px;
  background-image: url("../images/gplaypattern.png");
  color: #5B5941;
}

@media (min-width: 992px) {
  body {
    padding-top: 150px;
  }
}

.pagination {
  margin-bottom: 15px;
}

p {
  font-family: 'Montserrat', sans-serif;
  Font-Size: 15px;
  letter-spacing: -0.5px;
}

.description {
  float: right;
  text-align: right;
}

.projects {
  font-family: 'Concert One', cursive;
  letter-spacing: -3PX;
  font-size: 50px;
}

.project-desc {
  padding-top: 30px;
}

.navbar-brand {
  font-family: 'Concert One', cursive;
  Font-Size: 48px;
  letter-spacing: -5PX;
}

h3 {
  font-family: 'Montserrat', sans-serif;
  color: #5B5941;
  letter-spacing: -3px;
  float: right;
  font-size: 40px;
}

.navbar {
  background-color: #F7B99E !important;
  border-radius: 10px;
  font-family: 'Montserrat', sans-serif;
  letter-spacing: -1px;
  padding: 15px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.img-fluid {
  opacity: .7;
}

.btn {
  background-color: #87B6A7 !important;
  border-color: #87B6A7 !important;
  letter-spacing: -1px;
  float: right;
  margin: 1px;
}

.prof-img {
  border-radius: 10px;
}

.first-character {
  float: left;
  font-family: 'Rubik', sans-serif;
  font-size: 110px;
  line-height: 60px;
  /* padding-top: 4px; */
  padding-right: 4px;
  padding-left: 3px;
}

footer {
  background-color: #7F7F7F !important;
}

.center-block {
  margin-left:auto;
  margin-right:auto;
  display:block;
}

.contact-big {
  font-family: 'Concert One', cursive;
  font-size: 80px;
  float: right;
  padding: 0px 10px;
  letter-spacing: -7px;
}
.contact-small {
  display: flex;
  align-items: center;
}

.contact-row {
padding: 0px;
}

.arrowphn {
  font-size: 60px;
  color: #87B6A7;
}

.arrowphn:hover + .show {
  display: block;
}


.show {
  display: none;
  padding-left: 10px;
}

.arrowphn:hover, .arrowphn:active {
  font-size: 600%;
}


.arrow {
  color: #87B6A7;
}

.arrow:hover, .arrow:active {
  font-size: 600%;
}

